k8s/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.home.gaborzeller.com`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  tls:
    certResolver: cloudflare
    domains:
      - main: "*.home.gaborzeller.com"
